# projectn-bolt-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  git_tag.sh  run_example.sh  update_aws_sdk_submodule.sh  update_version.sh  vcpkg.json
.github/workflows/: aws-sdk-cpp.yml  build.yml  release.yml
bolt/: CMakeLists.txt  Config.cmake.in
bolt/include/: bolt_s3_client.h  bolt_s3_client_model.h  bolt_s3_config.h  bolt_s3_curl_client.h  bolt_s3_http_client_factory.h  bolt_s3_signer.h
bolt/src/: bolt_s3_client.cpp  bolt_s3_config.cpp  bolt_s3_curl_client.cpp  bolt_s3_http_client_factory.cpp  bolt_s3_signer.cpp
cmake/: InstallingConfigs.cmake  InstallingGeneral.cmake  Packing.cmake  ResolvePlatform.cmake  vcpkg.json
example/: CMakeLists.txt  build.sh  main.cpp
